// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message should have a class if the message was made by the Watson API 1`] = `
<section
  className="message watson"
>
  <p>
    My name is Dr. Watson.  I am excited to hear that your week has been going well.
  </p>
</section>
`;

exports[`Message should match the snapshot if the message is made by the user 1`] = `
<section
  className="message"
>
  <p>
    I have been having a terrific week!
  </p>
</section>
`;
